remove deprecation warning