@@ -6,10 +6,12 @@ package com.github.tonivade.claudb.command;
 
 import static com.github.tonivade.claudb.data.DatabaseKey.safeKey;
 import static com.github.tonivade.resp.protocol.SafeString.safeString;
+import static java.util.Objects.requireNonNull;
 import static org.hamcrest.Matchers.equalTo;
 import static org.mockito.ArgumentMatchers.anyInt;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
+
 import org.hamcrest.Matcher;
 import org.hamcrest.MatcherAssert;
 import org.junit.rules.TestRule;
@@ -17,6 +19,7 @@ import org.junit.runner.Description;
 import org.junit.runners.model.Statement;
 import org.mockito.Mockito;
 import org.mockito.MockitoAnnotations;
+
 import com.github.tonivade.claudb.DBServerContext;
 import com.github.tonivade.claudb.DBServerState;
 import com.github.tonivade.claudb.DBSessionState;
@@ -48,7 +51,7 @@ public class CommandRule implements TestRule {
   private RedisToken response;
 
   public CommandRule(Object target) {
-    this.target = target;
+    this.target = requireNonNull(target);
   }
 
   public Request getRequest() {
@@ -86,16 +89,18 @@ public class CommandRule implements TestRule {
 
         when(request.getServerContext()).thenReturn(server);
         when(request.getSession()).thenReturn(session);
+
         when(session.getId()).thenReturn("localhost:12345");
         when(session.getValue("state")).thenReturn(Option.some(sessionState));
         when(session.getValue("tx")).thenReturn(Option.none());
         when(session.removeValue("tx")).thenReturn(Option.none());
+        
         when(server.getAdminDatabase()).thenReturn(serverState.getAdminDatabase());
         when(server.isMaster()).thenReturn(true);
         when(server.getValue("state")).thenReturn(Option.some(serverState));
 
         try (AutoCloseable openMocks = MockitoAnnotations.openMocks(target)) {
-          dbCommand = target.getClass().getAnnotation(CommandUnderTest.class).value().newInstance();
+          dbCommand = target.getClass().getAnnotation(CommandUnderTest.class).value().getDeclaredConstructor().newInstance();
 
           base.evaluate();
 
